# fastapi_calculator

./: README.md  pyproject.toml
app/: __init__.py
app/routes/: __init__.py  calc.py  main.py
