[tool.poetry]
name = "fastapi-calculator"
version = "0.1.0"
description = "just a fastapi basic calculator"
authors = ["prerreslin <sanyatop011209@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.30.6"

[tool.poetry.scripts]
run_app = "app:main"  # Убедитесь, что функция main() есть в app/__init__.py
